--- a/package.json
+++ b/package.json
@@ -1,24 +1,33 @@
 {
-    "name": "utonic-contract",
-    "version": "0.0.1",
-    "scripts": {
-        "start": "blueprint run",
-        "build": "blueprint build",
-        "test": "jest --verbose"
-    },
+    "name": "test_folder",
+    "version": "1.0.0",
+    "main": "index.js",
+    "license": "MIT",
     "devDependencies": {
-        "@ton/blueprint": "^0.22.0",
-        "@ton/sandbox": "^0.20.0",
-        "@ton/test-utils": "^0.4.2",
-        "@types/jest": "^29.5.12",
-        "@types/node": "^20.14.10",
-        "jest": "^29.7.0",
-        "prettier": "^3.3.2",
-        "@ton/ton": "^13.11.2",
-        "@ton/core": "~0",
-        "@ton/crypto": "^3.2.0",
-        "ts-jest": "^29.2.0",
-        "ts-node": "^10.9.2",
-        "typescript": "^5.5.3"
+      "@swc/core": "^1.3.63",
+      "@ton-community/func-js": "^0.6.2",
+      "@ton-community/sandbox": "^0.11.0",
+      "@types/jest": "^29.5.2",
+      "@types/node": "^20.3.1",
+      "@types/qrcode-terminal": "^0.12.0",
+      "@types/qs": "^6.9.7",
+      "jest": "^29.5.0",
+      "qrcode-terminal": "^0.12.0",
+      "qs": "^6.11.2",
+      "ton": "^13.5.0",
+      "ton-core": "^0.49.1",
+      "ton-crypto": "^3.2.0",
+      "ts-jest": "^29.1.0",
+      "ts-node": "^10.9.1",
+      "typescript": "^5.1.3"
+    },
+    "scripts": {
+      "compileminter": "ts-node ./scripts/compileUTonMinter.ts",
+      "compilewallet": "ts-node ./scripts/compileUTonWallet.ts",
+      "compilewithdraw": "ts-node ./scripts/compileUTonWithdraw.ts"
+    },
+    "dependencies": {
+      "@ton-community/test-utils": "^0.2.0"
     }
-}
+  }
+  
