--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,16 @@
 {
-    "compilerOptions": {
-        "target": "ES2020",
-        "outDir": "dist",
-        "module": "commonjs",
-        "declaration": true,
-        "esModuleInterop": true,
-        "forceConsistentCasingInFileNames": true,
-        "strict": true,
-        "skipLibCheck": true
-    }
+	"compilerOptions": {
+		"target" : "es2020",
+		"module" : "commonjs",
+		"esModuleInterop" : true,
+		"forceConsistentCasingInFileNames": true,
+		"strict" : true,
+		"skipLibCheck" : true,
+		"resolveJsonModule" : true
+
+	},
+	"ts-node": {
+		"transpileOnly" : true,
+		"transpile" : "ts-node/transpilers/swc"
+	}
 }
