--- a/package.json
+++ b/package.json
@@ -2,24 +2,25 @@
   "name": "utonic-contract",
   "version": "0.0.1",
   "scripts": {
-      "compileminter": "npx func-js contracts/minter.func --boc build/minter.cell",
-      "compilewallet": "npx func-js contracts/wallet.func --boc build/wallet.cell",
-      "compilewithdraw": "npx func-js contracts/withdraw.func --boc build/withdraw.cell",
-      "compileproxy": "npx func-js contracts/proxy.func --boc build/proxy.cell"
+    "compileminter": "npx func-js contracts/minter.func --boc build/minter.cell",
+    "compilewallet": "npx func-js contracts/wallet.func --boc build/wallet.cell",
+    "compilewithdraw": "npx func-js contracts/withdraw.func --boc build/withdraw.cell",
+    "compileproxywhale": "npx func-js contracts/proxy/proxy_whale/proxy_whale.func --boc build/proxy_whale.cell",
+    "compileproxystton": "npx func-js contracts/proxy/proxy_stton/proxy_stton.func --boc build/proxy_stton.cell"
   },
   "devDependencies": {
-      "@ton/blueprint": "^0.22.0",
-      "@ton/sandbox": "^0.20.0",
-      "@ton/test-utils": "^0.4.2",
-      "@types/jest": "^29.5.12",
-      "@types/node": "^20.14.10",
-      "jest": "^29.7.0",
-      "prettier": "^3.3.2",
-      "@ton/ton": "^13.11.2",
-      "@ton/core": "~0",
-      "@ton/crypto": "^3.2.0",
-      "ts-jest": "^29.2.0",
-      "ts-node": "^10.9.2",
-      "typescript": "^5.5.3"
+    "@ton/blueprint": "^0.22.0",
+    "@ton/core": "^0.57.0",
+    "@ton/crypto": "^3.2.0",
+    "@ton/sandbox": "^0.20.0",
+    "@ton/test-utils": "^0.4.2",
+    "@ton/ton": "^13.11.2",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.14.10",
+    "jest": "^29.7.0",
+    "prettier": "^3.3.2",
+    "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.4"
   }
 }
