--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "scripts": {
     "compileminter": "npx func-js contracts/minter.func --boc build/minter.cell",
     "compilewallet": "npx func-js contracts/wallet.func --boc build/wallet.cell",
-    "compilewithdraw": "npx func-js contracts/withdraw.func --boc build/withdraw.cell",
-    "compileproxywhale": "npx func-js contracts/proxy/proxy_whale/proxy_whale.func --boc build/proxy_whale.cell",
-    "compileproxystton": "npx func-js contracts/proxy/proxy_stton/proxy_stton.func --boc build/proxy_stton.cell",
+    "compilewithdraw": "npx func-js contracts/proxy/proxy_ton/withdraw/withdraw.func --boc build/withdraw.cell",
+    "compileproxytston": "npx func-js contracts/proxy/proxy_tston/proxy_tston.func --boc build/proxy_tston.cell",
+    "compileproxyton": "npx func-js contracts/proxy/proxy_ton/proxy_ton.func --boc build/proxy_ton.cell",
     "test": "jest --verbose"
   },
   "devDependencies": {
