--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@ton/ton": "^13.11.2",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.14.10",
+    "ini": "^5.0.0",
     "jest": "^29.7.0",
     "prettier": "^3.3.2",
     "ts-jest": "^29.2.5",
