--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "compileproxywhale3": "npx func-js contracts/proxy/proxy_whale3/proxy_whale3.func --boc build/proxy_whale3.cell",
     "compiletestjettonminter": "npx func-js contracts/test/jetton/minter.func --boc build/test_jetton_minter.cell",
     "compiletestjettonwallet": "npx func-js contracts/test/jetton/wallet.func --boc build/test_jetton_wallet.cell",
+    "compilediscovery": "npx func-js contracts/discovery/discovery.func --boc build/discovery.cell",
+    "compilediscoveryreceiver": "npx func-js contracts/discovery/discovery_receiver.func --boc build/discovery_receiver.cell",
     "test": "jest --verbose"
   },
   "devDependencies": {
